fix overflow

--- a/assests/styles/style.css
+++ b/assests/styles/style.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 * {
@@ -50,7 +51,7 @@ h4 {
 .about,
 .advantages,
 .contact {
-    max-width: 100%;
+    max-width: 100vw;
     width: 1056px;
     margin: 0 auto;
 }
